Font weight correction mobile menu 💀

--- a/cartridges/mens_app/cartridge/static/default/css/style.css
+++ b/cartridges/mens_app/cartridge/static/default/css/style.css
@@ -607,10 +607,11 @@ header .main-menu {
     line-height: 25px; }
   #customMenuResponsive h3.category-title {
     font-family: "AvenirLTStd-Heavy" !important;
-    margin: 0 0 18px 0; }
+    margin: 0 0 18px 0;
+    font-weight: 900; }
   #customMenuResponsive .sub-items--lvl-one .nav-link.parent,
   #customMenuResponsive .sub-items--lvl-one .nav-link {
-    font-weight: 800;
+    font-weight: 900;
     text-transform: uppercase;
     font-size: 22px !important;
     line-height: 30px; }
